# credit-risk-prediction

./: .gitignore  Miguel_VS_Lola.md  Miguel_VS_Lola.txt  README.md  main.py  practica1_notebook.ipynb  practica1_pruebas_pre_clase  practica1_pruebas_pre_clase.ipynb  practica1_train_test_split.ipynb  pyproject.toml
data/filtered/: X_test_filtered.pkl  y_test_filtered.pkl  y_train_filtered.pkl
models/: practica1_filter.pkl
src/filtering/: practica1_filtering.py
src/preprocessing/: practica1_preprocessing.py
